force-app/main/default/objects/ProdutosPlanejamento__c/ProdutosPlanejamento__c.object-meta.xml
<CustomObject>
    <label>Produtos do Planejamento</label>
    <nameField>
        <label>Produtos do Planejamento Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos dos Planejamentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>