force-app/main/default/objects/ProdutosPlanejamento__c/fields/Planning__c.field-meta.xml
<CustomField>
    <fullName>Planning__c</fullName>
    <label>Planejamento</label>
    <referenceTo>PlanejamentoVendas__c</referenceTo>
    <relationshipLabel>Produtos dos Planejamentos (Planejamento de Vendas)</relationshipLabel>
    <relationshipName>Produtos_dos_Planejamentos1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>