force-app/main/default/objects/ProdutosPlanejamento__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos dos Planejamentos</relationshipLabel>
    <relationshipName>Produtos_dos_Planejamentos</relationshipName>
    <type>Lookup</type>
</CustomField>