force-app/main/default/objects/ProdutosPlanejamento__c/fields/ProductMeasureUnit__c.field-meta.xml
<CustomField>
    <fullName>ProductMeasureUnit__c</fullName>
    <formula>TEXT( Product__r.GrossWeightUnitOfMeasure__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidade de Medida do Produto</label>
    <type>Text</type>
</CustomField>