force-app/main/default/objects/ProdutosPlanejamento__c/fields/SalesVolume__c.field-meta.xml
<CustomField>
    <fullName>SalesVolume__c</fullName>
    <label>Volume de Venda</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>