force-app/main/default/objects/ProdutosPlanejamento__c/fields/SaleValue__c.field-meta.xml
<CustomField>
    <fullName>SaleValue__c</fullName>
    <label>Valor da Venda</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>