force-app/main/default/objects/ProdutosPlanejamento__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>SalesVolume__c</columns>
    <columns>SaleValue__c</columns>
    <columns>Planning__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>